ENH: Added test vtkMRMLCameraDisplayableManagerTest1
This test instantiates a Renderer, Renderwindow, Interactor and associate
the custom interactor style: vtkDisplayableManagerInteractorStyle

Then,

 1) Instantiate vtkMRMLApplicationLogic and add a vtkMRMLViewNode
 2) Instantiate DisplayableManagerFactory and register a Camera and a View Manager

 3) Save the scene as a file and compare it with the one checked in the repository
 4) Load the scene
 5) Re-play a stream of event
 6) Do a screenshot and compare with the Baseline

That test could be considered as a basis to write additional test
related to DisplayableManager.

git-svn-id: http://svn.slicer.org/Slicer3/trunk@13997 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/Libs/MRMLDisplayableManager/CMakeLists.txt
+++ b/Libs/MRMLDisplayableManager/CMakeLists.txt
@@ -161,3 +161,9 @@ IF(VTK_WRAP_PYTHON AND BUILD_SHARED_LIBS)
 
 ENDIF(VTK_WRAP_PYTHON AND BUILD_SHARED_LIBS)
  
+# --------------------------------------------------------------------------
+# Testing
+
+IF(BUILD_TESTING)
+  ADD_SUBDIRECTORY(Testing)
+ENDIF(BUILD_TESTING)
