ENH: Activated compiling of Annotation tests again
git-svn-id: http://svn.slicer.org/Slicer3/trunk@14007 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/QTModules/Annotation/CMakeLists.txt
+++ b/QTModules/Annotation/CMakeLists.txt
@@ -151,6 +151,6 @@ Slicer3_build_qtmodule(
   )
 
 if(BUILD_TESTING)
-  #ADD_SUBDIRECTORY(Testing)
+  ADD_SUBDIRECTORY(Testing/Cxx)
 endif(BUILD_TESTING)
 
