--- a/Modules/Meshing/Filter/CMakeLists.txt
+++ b/Modules/Meshing/Filter/CMakeLists.txt
@@ -95,6 +95,13 @@ TARGET_LINK_LIBRARIES(${LIB_NAME}
   mimxCommon
   )
 
+# Apply user-defined properties to the library target.
+IF(Slicer3_LIBRARY_PROPERTIES)
+  SET_TARGET_PROPERTIES(${LIB_NAME} PROPERTIES
+     ${Slicer3_LIBRARY_PROPERTIES}
+  )
+ENDIF(Slicer3_LIBRARY_PROPERTIES)
+
 install(TARGETS ${LIB_NAME}
   RUNTIME DESTINATION ${Slicer3_INSTALL_BIN_DIR} COMPONENT RuntimeLibraries 
   LIBRARY DESTINATION ${Slicer3_INSTALL_LIB_DIR} COMPONENT RuntimeLibraries
