ENH: Add the Transforms IO
git-svn-id: http://svn.slicer.org/Slicer3/trunk@14047 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/Base/QTCoreModules/CMakeLists.txt
+++ b/Base/QTCoreModules/CMakeLists.txt
@@ -44,6 +44,8 @@ SET(KIT_SRCS
   qSlicerScalarOverlayIO.h
   qSlicerScalarOverlayIOOptionsWidget.cxx
   qSlicerScalarOverlayIOOptionsWidget.h
+  qSlicerTransformsIO.cxx
+  qSlicerTransformsIO.h
   qSlicerTransformsModule.cxx
   qSlicerTransformsModule.h
   qSlicerTransformsModuleWidget.cxx
@@ -68,6 +70,7 @@ SET(KIT_MOC_SRCS
 
   qSlicerScalarOverlayIO.h
   qSlicerScalarOverlayIOOptionsWidget.h
+  qSlicerTransformsIO.h
   qSlicerTransformsModule.h
   qSlicerTransformsModuleWidget.h
   )
