ENH: Add fiducial IO
git-svn-id: http://svn.slicer.org/Slicer3/trunk@14049 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/Base/QTCoreModules/CMakeLists.txt
+++ b/Base/QTCoreModules/CMakeLists.txt
@@ -30,6 +30,9 @@ SET(KIT_SRCS
   qSlicerDataModuleWidget.cxx
   qSlicerDataModuleWidget.h
 
+  qSlicerFiducialsIO.cxx
+  qSlicerFiducialsIO.h
+
   qSlicerModelsIO.cxx
   qSlicerModelsIO.h
 
@@ -65,6 +68,8 @@ SET(KIT_MOC_SRCS
 
   qSlicerDataModule.h
   qSlicerDataModuleWidget.h
+
+  qSlicerFiducialsIO.h
 
   qSlicerModelsIO.h
 
