--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -614,12 +614,21 @@ slicer3_get_persistent_property(Slicer3_Base_INCLUDE_DIRS Slicer3_Base_INCLUDE_D
 INCLUDE("${Slicer3_CMAKE_DIR}/Slicer3ModuleLogicMacros.cmake")
 
 IF (NOT Slicer3_USE_KWWIDGETS)
+  # KWWidgets and Qt modules share the same logics typically located in the
+  # kwwdigets modules. When KWWidgets is not build, the logic are missing for Qt
+  # we need to manually add them:
   # Loop through Modules subdirectory and try to include Logic subdirectory if it exists
   FILE(GLOB modules_subdirs RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} Modules/*)
   FOREACH(subdir ${modules_subdirs})
     IF(IS_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/${subdir}/Logic)
       ADD_SUBDIRECTORY(${subdir}/Logic)
     ENDIF()
+    FILE(GLOB subsubdirs RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} Modules/${subdir}/*)
+    FOREACH(subsubdir ${subsubdirs})
+      IF(IS_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/${subdir}/${subsubdir}/Logic)
+        ADD_SUBDIRECTORY(${subdir}/${subsubdir}/Logic)
+      ENDIF()
+    ENDFOREACH()
   ENDFOREACH()
 ENDIF()
 
