ENH: Initial commit of BRAINSFitIGT, a customized version of BRAINSFit to support registration for image-guided procedures. The main differences from BRAINSFit are:  1) ROIBSpline mode is added, so that the bspline grid is initialized to cover  just the bounding box of the aligned ROIs of the input images. Support for  ROIBspline has been added to BRAINSFitHelper earlier.  2) The user is given an option to maintain the list of all the intermediate  transforms to facilitate debugging in the case of registration failure.  3) Default bspline grid size is changed to 3x3x3, which may be sufficient for  prostate registration.
git-svn-id: http://svn.slicer.org/Slicer3/trunk@14076 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/Applications/CLI/BRAINSTools/CMakeLists.txt
+++ b/Applications/CLI/BRAINSTools/CMakeLists.txt
@@ -13,3 +13,8 @@ add_subdirectory(BRAINSFit)
 add_subdirectory(BRAINSDemonWarp)
 add_subdirectory(BRAINSROIAuto)
 add_subdirectory(BRAINSResample)
+
+option(BUILD_BRAINSFitIGT "Build the customized version of BRAINSFit for IGT registration support" OFF)
+if(BUILD_BRAINSFitIGT)
+  add_subdirectory(BRAINSFitIGT)
+endif(BUILD_BRAINSFitIGT)
