ENH: Review the DisplayableManagerFactory design
1) The factory is now a singleton (following the nifty pattern also applied in vtkEventBroker, see http://en.wikibooks.org/wiki/More_C%2B%2B_Idioms/Nifty_Counter)

2) DisplayableManager are registered using their classname
  - For that reason, in CMakeLists, the displayableManager should be
processed using the VTK_MAKE_INSTANTIATOR3 macro. Dong so will create the
proper list of instanciator.

3) The concept of DisplayableManagerGroup has been created.
A group is a list of DisplayableManager instances associated with a Renderer
and a MRMLViewNode.

For example, the qMRMLThreeDRenderView can call InstantiateDisplayableManagers()
method on the factory and obtain a DisplayableManagerGroup.

Observing the group, the qMRMLThreeDRenderView will be able to catch
the UpdateEvent (invoked upon a DisplayableManager call RequestRender) and
call its method scheduleRender(). Internally, ScheduleRender used a QTimer
to handle the compression of Rendering events.

The group also observe the Factory and will instantiate or delete a DisplayableManager
if DisplayableManager is registered/unregistered from the factory after
the group has been instantiated. The group observe the event
DisplayableManagerFactoryRegisteredEvent and DisplayableManagerFactoryUnRegisteredEvent
from the factory.

Note: Nothing prevent the instantiation of multiple Group associated with
the same renderer

git-svn-id: http://svn.slicer.org/Slicer3/trunk@14087 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/Libs/MRMLDisplayableManager/CMakeLists.txt
+++ b/Libs/MRMLDisplayableManager/CMakeLists.txt
@@ -57,32 +57,47 @@ INSTALL(FILES
 # --------------------------------------------------------------------------
 # Sources
 
-SET(MRMLDisplayableManager_SRCS
-  vtkMRMLAbstractDisplayableManager.cxx
+SET(DisplayableManager_SRCS
   vtkMRMLCameraDisplayableManager.cxx
-  vtkMRMLDisplayableManagerFactory.cxx
   vtkMRMLModelDisplayableManager.cxx
   vtkMRMLViewDisplayableManager.cxx
+  )
+
+SET(KIT_SRCS
+  ${DisplayableManager_SRCS}
+  vtkMRMLAbstractDisplayableManager.cxx
+  vtkMRMLDisplayableManagerFactory.cxx
+  vtkMRMLDisplayableManagerGroup.cxx
   
   vtkDisplayableManagerInteractorStyle.cxx
   vtkDisplayableManagerBoxWidget2.cxx
   vtkDisplayableManagerBoxRepresentation.cxx
   )
 
+# Create the instantiator for DisplayableManager classes.
+SET(VTK_USE_INSTANTIATOR_NEW 1)
+VTK_MAKE_INSTANTIATOR3("${PROJECT_NAME}Instantiator"
+  DisplayableManagerInstantiator_SRCS
+  "${DisplayableManager_SRCS}"
+  "VTK_MRML_DISPLAYABLEMANAGER_EXPORT"
+  ${PROJECT_BINARY_DIR}
+  "vtk${PROJECT_NAME}Win32Header.h")
+
 # TCL Wrapping
 if (VTK_WRAP_TCL)
    include("${VTK_CMAKE_DIR}/vtkWrapTcl.cmake") 
-   vtk_wrap_tcl3(MRMLDisplayableManager  MRMLDisplayableManager_TCL_SRCS   "${MRMLDisplayableManager_SRCS}" "")
+   vtk_wrap_tcl3(MRMLDisplayableManager  KIT_TCL_SRCS   "${KIT_SRCS}" "")
 endif()
 
 SET(srcs
- ${MRMLDisplayableManager_SRCS}
+ ${KIT_SRCS}
+ ${DisplayableManagerInstantiator_SRCS}
  )
 
 if (VTK_WRAP_TCL)
   set(srcs
     ${srcs}
-    ${MRMLDisplayableManager_TCL_SRCS}
+    ${KIT_TCL_SRCS}
     )
 endif()
 
@@ -137,7 +152,7 @@ IF(VTK_WRAP_PYTHON AND BUILD_SHARED_LIBS)
   SET(KIT_PYTHON_LIBRARIES ${VTK_LIBRARIES})
 
   INCLUDE(${VTK_CMAKE_DIR}/vtkWrapPython.cmake)
-  VTK_WRAP_PYTHON3(${lib_name}Python PYTHON_SRCS "${MRMLDisplayableManager_SRCS}")
+  VTK_WRAP_PYTHON3(${lib_name}Python PYTHON_SRCS "${KIT_SRCS}")
   ADD_LIBRARY(${lib_name}PythonD ${PYTHON_SRCS})
   ADD_LIBRARY(${lib_name}Python MODULE ${lib_name}PythonInit.cxx)
   
