ENH: Reviewed QTModules/Annotation/CMakeLists.txt
MRML classes, Widgets classes and classes that should be run through the
macro VTK_MAKE_INSTANTIATOR3 are now listed in different variables

git-svn-id: http://svn.slicer.org/Slicer3/trunk@14090 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/QTModules/Annotation/CMakeLists.txt
+++ b/QTModules/Annotation/CMakeLists.txt
@@ -1,4 +1,3 @@
-cmake_minimum_required(VERSION 2.8)
 
 # Module name (usually identique to the directory name)
 SET(qt_module_name "Annotation")
@@ -11,56 +10,26 @@ SET(qt_module_export_directive "Q_SLICER_QTMODULES_ANNOTATIONS_EXPORT")
 SET(qt_module_include_directories
   ${CMAKE_CURRENT_SOURCE_DIR}/Widgets
   ${CMAKE_CURRENT_SOURCE_DIR}/MRML
-  #${CMAKE_CURRENT_SOURCE_DIR}/../../Modules/Measurements/
-  #${CMAKE_CURRENT_BINARY_DIR}/../../Modules/Measurements/
   )
-#   ${CMAKE_CURRENT_BINARY_DIR}/Widgets
-# MESSAGE(STATUS  "=========>What ${CMAKE_CURRENT_BINARY_DIR}/../../Modules/Measurements/")  
+
+# DisplayableManager classes
+SET(DisplayableManager_SRCS
+  vtkMRMLAnnotationTextDisplayableManager.cxx
+  )
+
+# Create the instantiator for DisplayableManager classes.
+#SET(VTK_USE_INSTANTIATOR_NEW 1)
+#VTK_MAKE_INSTANTIATOR3("qSlicer${qt_module_title}ModuleInstantiator"
+#  DisplayableManagerInstantiator_SRCS
+#  "${DisplayableManager_SRCS}"
+#  "${qt_module_export_directive}"
+#  ${CMAKE_CURRENT_BINARY_DIR}
+#  "qSlicer${qt_module_title}ModuleExport.h")
 
 # Source files
 SET(qt_module_SRCS
-  ${CMAKE_CURRENT_SOURCE_DIR}/MRML/vtkMRMLAnnotationNode.cxx
-  ${CMAKE_CURRENT_SOURCE_DIR}/MRML/vtkMRMLAnnotationNode.h
-  ${CMAKE_CURRENT_SOURCE_DIR}/MRML/vtkMRMLAnnotationStorageNode.cxx
-  ${CMAKE_CURRENT_SOURCE_DIR}/MRML/vtkMRMLAnnotationStorageNode.h
-  ${CMAKE_CURRENT_SOURCE_DIR}/MRML/vtkMRMLAnnotationDisplayNode.cxx
-  ${CMAKE_CURRENT_SOURCE_DIR}/MRML/vtkMRMLAnnotationDisplayNode.h
-  ${CMAKE_CURRENT_SOURCE_DIR}/MRML/vtkMRMLAnnotationTextDisplayNode.cxx
-  ${CMAKE_CURRENT_SOURCE_DIR}/MRML/vtkMRMLAnnotationTextDisplayNode.h
-  ${CMAKE_CURRENT_SOURCE_DIR}/MRML/vtkMRMLAnnotationControlPointsNode.cxx
-  ${CMAKE_CURRENT_SOURCE_DIR}/MRML/vtkMRMLAnnotationControlPointsNode.h
-  ${CMAKE_CURRENT_SOURCE_DIR}/MRML/vtkMRMLAnnotationControlPointsStorageNode.cxx
-  ${CMAKE_CURRENT_SOURCE_DIR}/MRML/vtkMRMLAnnotationControlPointsStorageNode.h
-  ${CMAKE_CURRENT_SOURCE_DIR}/MRML/vtkMRMLAnnotationPointDisplayNode.cxx
-  ${CMAKE_CURRENT_SOURCE_DIR}/MRML/vtkMRMLAnnotationPointDisplayNode.h
-  ${CMAKE_CURRENT_SOURCE_DIR}/MRML/vtkMRMLAnnotationLinesNode.cxx
-  ${CMAKE_CURRENT_SOURCE_DIR}/MRML/vtkMRMLAnnotationLinesNode.h
-  ${CMAKE_CURRENT_SOURCE_DIR}/MRML/vtkMRMLAnnotationLinesStorageNode.cxx
-  ${CMAKE_CURRENT_SOURCE_DIR}/MRML/vtkMRMLAnnotationLinesStorageNode.h
-  ${CMAKE_CURRENT_SOURCE_DIR}/MRML/vtkMRMLAnnotationLineDisplayNode.cxx
-  ${CMAKE_CURRENT_SOURCE_DIR}/MRML/vtkMRMLAnnotationLineDisplayNode.h
-  ${CMAKE_CURRENT_SOURCE_DIR}/MRML/vtkMRMLAnnotationAngleNode.cxx
-  ${CMAKE_CURRENT_SOURCE_DIR}/MRML/vtkMRMLAnnotationAngleNode.h
-  ${CMAKE_CURRENT_SOURCE_DIR}/MRML/vtkMRMLAnnotationAngleStorageNode.cxx
-  ${CMAKE_CURRENT_SOURCE_DIR}/MRML/vtkMRMLAnnotationAngleStorageNode.h
-  ${CMAKE_CURRENT_SOURCE_DIR}/MRML/vtkMRMLAnnotationRulerNode.cxx
-  ${CMAKE_CURRENT_SOURCE_DIR}/MRML/vtkMRMLAnnotationRulerNode.h
-  ${CMAKE_CURRENT_SOURCE_DIR}/MRML/vtkMRMLAnnotationRulerStorageNode.cxx
-  ${CMAKE_CURRENT_SOURCE_DIR}/MRML/vtkMRMLAnnotationRulerStorageNode.h
-  ${CMAKE_CURRENT_SOURCE_DIR}/MRML/vtkMRMLAnnotationFiducialNode.cxx
-  ${CMAKE_CURRENT_SOURCE_DIR}/MRML/vtkMRMLAnnotationFiducialNode.h
-  ${CMAKE_CURRENT_SOURCE_DIR}/MRML/vtkMRMLAnnotationFiducialsStorageNode.cxx
-  ${CMAKE_CURRENT_SOURCE_DIR}/MRML/vtkMRMLAnnotationFiducialsStorageNode.h
-  ${CMAKE_CURRENT_SOURCE_DIR}/MRML/vtkMRMLAnnotationStickyNode.cxx
-  ${CMAKE_CURRENT_SOURCE_DIR}/MRML/vtkMRMLAnnotationStickyNode.h
-  ${CMAKE_CURRENT_SOURCE_DIR}/MRML/vtkMRMLAnnotationTextNode.cxx
-  ${CMAKE_CURRENT_SOURCE_DIR}/MRML/vtkMRMLAnnotationTextNode.h
-  ${CMAKE_CURRENT_SOURCE_DIR}/MRML/vtkMRMLAnnotationROINode.cxx
-  ${CMAKE_CURRENT_SOURCE_DIR}/MRML/vtkMRMLAnnotationROINode.h
-  ${CMAKE_CURRENT_SOURCE_DIR}/MRML/vtkMRMLAnnotationSplineNode.cxx
-  ${CMAKE_CURRENT_SOURCE_DIR}/MRML/vtkMRMLAnnotationSplineNode.h
-  ${CMAKE_CURRENT_SOURCE_DIR}/MRML/vtkMRMLAnnotationBidimensionalNode.cxx
-  ${CMAKE_CURRENT_SOURCE_DIR}/MRML/vtkMRMLAnnotationBidimensionalNode.h
+  ${DisplayableManager_SRCS}
+  ${DisplayableManagerInstantiator_SRCS}
   qSlicerAnnotationModule.cxx
   qSlicerAnnotationModule.h
   vtkSlicerAnnotationModuleLogic.cxx
@@ -68,19 +37,17 @@ SET(qt_module_SRCS
   qSlicerAnnotationModuleWidget.cxx
   qSlicerAnnotationModuleWidget.h
   qSlicerAnnotationModuleAnnotationPropertyDialog.cxx
-  qSlicerAnnotationModuleAnnotationPropertyDialog.h  
+  qSlicerAnnotationModuleAnnotationPropertyDialog.h
   qSlicerAnnotationModuleReportDialog.cxx
-  qSlicerAnnotationModuleReportDialog.h    
+  qSlicerAnnotationModuleReportDialog.h
   qSlicerAnnotationModulePushButton.cxx
-  qSlicerAnnotationModulePushButton.h    
+  qSlicerAnnotationModulePushButton.h
   qSlicerAnnotationModuleScreenShotDialog.cxx
   qSlicerAnnotationModuleScreenShotDialog.h
   qSlicerAnnotationModuleImageUtil.cxx
   qSlicerAnnotationModuleImageUtil.h
   vtkMRMLAnnotationDisplayableManager.cxx
   vtkMRMLAnnotationDisplayableManager.h
-  vtkMRMLAnnotationTextDisplayableManager.cxx
-  vtkMRMLAnnotationTextDisplayableManager.h
   vtkSlicerAnnotationRulerManager.cxx
   vtkSlicerAnnotationRulerManager.h
   vtkSlicerAnnotationAngleManager.cxx
@@ -93,11 +60,69 @@ SET(qt_module_SRCS
   vtkSlicerAnnotationSplineManager.h
   vtkSlicerAnnotationBidimensionalManager.cxx
   vtkSlicerAnnotationBidimensionalManager.h
-  # ${CMAKE_CURRENT_SOURCE_DIR}/Widgets/vtkAnnotationAngleWidget.cxx
-  # ${CMAKE_CURRENT_SOURCE_DIR}/Widgets/vtkAnnotationAngleWidget.h
-  # ${CMAKE_CURRENT_SOURCE_DIR}/Widgets/vtkAnnotationAngleWidgetClass.cxx
-  # ${CMAKE_CURRENT_SOURCE_DIR}/Widgets/vtkAnnotationAngleWidgetClass.h
   )
+
+SET(MODULE_WIDGETS_SRCS
+  #vtkAnnotationAngleWidget.cxx
+  #vtkAnnotationAngleWidget.h
+  #vtkAnnotationAngleWidgetClass.cxx
+  #vtkAnnotationAngleWidgetClass.h
+  )
+
+# Expand WIDGETS sources filename and append to module sources
+FOREACH(file ${MODULE_WIDGETS_SRCS})
+  LIST(APPEND qt_module_SRCS ${CMAKE_CURRENT_SOURCE_DIR}/Widgets/${file})
+ENDFOREACH()
+
+SET(MODULE_MRML_SRCS
+  vtkMRMLAnnotationNode.cxx
+  vtkMRMLAnnotationNode.h
+  vtkMRMLAnnotationStorageNode.cxx
+  vtkMRMLAnnotationStorageNode.h
+  vtkMRMLAnnotationDisplayNode.cxx
+  vtkMRMLAnnotationDisplayNode.h
+  vtkMRMLAnnotationTextDisplayNode.cxx
+  vtkMRMLAnnotationTextDisplayNode.h
+  vtkMRMLAnnotationControlPointsNode.cxx
+  vtkMRMLAnnotationControlPointsNode.h
+  vtkMRMLAnnotationControlPointsStorageNode.cxx
+  vtkMRMLAnnotationControlPointsStorageNode.h
+  vtkMRMLAnnotationPointDisplayNode.cxx
+  vtkMRMLAnnotationPointDisplayNode.h
+  vtkMRMLAnnotationLinesNode.cxx
+  vtkMRMLAnnotationLinesNode.h
+  vtkMRMLAnnotationLinesStorageNode.cxx
+  vtkMRMLAnnotationLinesStorageNode.h
+  vtkMRMLAnnotationLineDisplayNode.cxx
+  vtkMRMLAnnotationLineDisplayNode.h
+  vtkMRMLAnnotationAngleNode.cxx
+  vtkMRMLAnnotationAngleNode.h
+  vtkMRMLAnnotationAngleStorageNode.cxx
+  vtkMRMLAnnotationAngleStorageNode.h
+  vtkMRMLAnnotationRulerNode.cxx
+  vtkMRMLAnnotationRulerNode.h
+  vtkMRMLAnnotationRulerStorageNode.cxx
+  vtkMRMLAnnotationRulerStorageNode.h
+  vtkMRMLAnnotationFiducialNode.cxx
+  vtkMRMLAnnotationFiducialNode.h
+  vtkMRMLAnnotationFiducialsStorageNode.cxx
+  vtkMRMLAnnotationFiducialsStorageNode.h
+  vtkMRMLAnnotationStickyNode.cxx
+  vtkMRMLAnnotationStickyNode.h
+  vtkMRMLAnnotationTextNode.cxx
+  vtkMRMLAnnotationTextNode.h
+  vtkMRMLAnnotationROINode.cxx
+  vtkMRMLAnnotationROINode.h
+  vtkMRMLAnnotationSplineNode.cxx
+  vtkMRMLAnnotationSplineNode.h
+  vtkMRMLAnnotationBidimensionalNode.cxx
+  vtkMRMLAnnotationBidimensionalNode.h
+  )
+
+# Expand MRML sources filename and append to module sources
+FOREACH(file ${MODULE_MRML_SRCS})
+  LIST(APPEND qt_module_SRCS ${CMAKE_CURRENT_SOURCE_DIR}/MRML/${file})
+ENDFOREACH()
 
 # Headers that should run through moc
 SET(qt_module_MOC_SRCS
@@ -112,9 +137,9 @@ SET(qt_module_MOC_SRCS
 # UI files
 SET(qt_module_UI_SRCS
   Resources/UI/qSlicerAnnotationModule.ui
-  Resources/UI/qSlicerAnnotationModuleAnnotationPropertyDialog.ui 
-  Resources/UI/qSlicerAnnotationModuleReportDialog.ui   
-  Resources/UI/qSlicerAnnotationModuleScreenShotDialog.ui   
+  Resources/UI/qSlicerAnnotationModuleAnnotationPropertyDialog.ui
+  Resources/UI/qSlicerAnnotationModuleReportDialog.ui
+  Resources/UI/qSlicerAnnotationModuleScreenShotDialog.ui
 )
  
 # Resources
@@ -127,18 +152,9 @@ SET(qt_module_target_libraries
   #${KWWidgets_LIBRARIES}
   #${ITK_LIBRARIES}
   #CommandLineModule
-  #SlicerTractographyDisplay
-  #SlicerTractographyFiducialSeeding
   qSlicerBaseQTCore
   #Measurements
-  #
-  
   )
-
-# not needed anymore - DH
-#file(GLOB headers
-#  "${CMAKE_CURRENT_SOURCE_DIR}/../Modules/Measurement/*.h"
-#®)
 
 Slicer3_build_qtmodule(
   NAME ${qt_module_name}
