BUG: Reviewed vtkMRMLAnnotationTextDisplayableManager - Now a true VTK class which inherits from vtkMRMLAsbtractDisplayableManager class
Also re-organized headers and updated CMakeLists.txt to enable the VTK_MAKE_INSTANTIATOR3 macro

git-svn-id: http://svn.slicer.org/Slicer3/trunk@14092 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/QTModules/Annotation/CMakeLists.txt
+++ b/QTModules/Annotation/CMakeLists.txt
@@ -18,13 +18,13 @@ SET(DisplayableManager_SRCS
   )
 
 # Create the instantiator for DisplayableManager classes.
-#SET(VTK_USE_INSTANTIATOR_NEW 1)
-#VTK_MAKE_INSTANTIATOR3("qSlicer${qt_module_title}ModuleInstantiator"
-#  DisplayableManagerInstantiator_SRCS
-#  "${DisplayableManager_SRCS}"
-#  "${qt_module_export_directive}"
-#  ${CMAKE_CURRENT_BINARY_DIR}
-#  "qSlicer${qt_module_title}ModuleExport.h")
+SET(VTK_USE_INSTANTIATOR_NEW 1)
+VTK_MAKE_INSTANTIATOR3("qSlicer${qt_module_title}ModuleInstantiator"
+  DisplayableManagerInstantiator_SRCS
+  "${DisplayableManager_SRCS}"
+  "${qt_module_export_directive}"
+  ${CMAKE_CURRENT_BINARY_DIR}
+  "qSlicer${qt_module_title}ModuleExport.h")
 
 # Source files
 SET(qt_module_SRCS
