BUG: stubbing out ComputeSUVBodyWeight CLI because of compilation error...
git-svn-id: http://svn.slicer.org/Slicer3/trunk@14097 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/Applications/CLI/CMakeLists.txt
+++ b/Applications/CLI/CMakeLists.txt
@@ -637,25 +637,25 @@ target_link_libraries (${CLP} ITKIO ITKBasicFilters)
 
 
 #####################
-set (CLP ComputeSUVBodyWeight)
-
-set ( ${CLP}_SOURCE ${CLP}.cxx )
-generateclp(${CLP}_SOURCE ${CLP}.xml ${Slicer3_SOURCE_DIR}/Resources/NAMICLogo.h ${Slicer3_SOURCE_DIR}/Resources/CTSCLogo.h)
-link_directories(${vtkITK_LIB_DIR})
-add_executable(${CLP} ${${CLP}_SOURCE})
-slicer3_set_plugins_output_path(${CLP})
-target_link_libraries (${CLP}
-  vtkITK
-  ModuleDescriptionParser
-  MRML
-  SlicerBaseLogic
-  SlicerBaseCLI
-  )
-include_directories(
-  ${vtkITK_SOURCE_DIR} 
-  ${vtkITK_BINARY_DIR} 
-  ${MRML_SOURCE_DIR} ${MRML_BINARY_DIR} 
-  ${SlicerBaseLogic_SOURCE_DIR}  ${SlicerBaseLogic_BINARY_DIR})
+#set (CLP ComputeSUVBodyWeight
+#
+#set ( ${CLP}_SOURCE ${CLP}.cxx )
+#generateclp(${CLP}_SOURCE ${CLP}.xml ${Slicer3_SOURCE_DIR}/Resources/NAMICLogo.h ${Slicer3_SOURCE_DIR}/Resources/CTSCLogo.h)
+#link_directories(${vtkITK_LIB_DIR})
+#add_executable(${CLP} ${${CLP}_SOURCE})
+#slicer3_set_plugins_output_path(${CLP})
+#target_link_libraries (${CLP}
+#  vtkITK
+#  ModuleDescriptionParser
+#  MRML
+#  SlicerBaseLogic
+#  SlicerBaseCLI
+#  )
+#include_directories(
+#  ${vtkITK_SOURCE_DIR} 
+#  ${vtkITK_BINARY_DIR} 
+#  ${MRML_SOURCE_DIR} ${MRML_BINARY_DIR} 
+#  ${SlicerBaseLogic_SOURCE_DIR}  ${SlicerBaseLogic_BINARY_DIR})
 
 
 #####################
@@ -830,7 +830,7 @@ if (Slicer3_SOURCE_DIR)
     AffineRegistrationLib
     BSplineDeformableRegistration
     BSplineDeformableRegistrationLib
-    ComputeSUVBodyWeight
+#    ComputeSUVBodyWeight
     LabelMapSmoothing
     LabelMapSmoothingLib
     ImageLabelCombine
