BUG: Fix CMakeLists.txt to automatically include Logic directory if they are in sub-sub-directory
The build system will look for either:
Modules/ModuleName/Logic
or
Modules/ModuleName/something/Logic

git-svn-id: http://svn.slicer.org/Slicer3/trunk@14117 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -623,10 +623,10 @@ IF (NOT Slicer3_USE_KWWIDGETS)
     IF(IS_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/${subdir}/Logic)
       ADD_SUBDIRECTORY(${subdir}/Logic)
     ENDIF()
-    FILE(GLOB subsubdirs RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} Modules/${subdir}/*)
+    FILE(GLOB subsubdirs RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} ${subdir}/*)
     FOREACH(subsubdir ${subsubdirs})
-      IF(IS_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/${subdir}/${subsubdir}/Logic)
-        ADD_SUBDIRECTORY(${subdir}/${subsubdir}/Logic)
+      IF(IS_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/${subsubdir}/Logic)
+        ADD_SUBDIRECTORY(${subsubdir}/Logic)
       ENDIF()
     ENDFOREACH()
   ENDFOREACH()
