ENH: Redesign the Qt Scene model
qMRMLSceneModel to track the mrml scene and the proxy models to handle data
organization and hierarchies are no longer separated into objects using the
qt proxy mechanism.
There is no a unique scene model instance, qMRMLSceneTreeModel now derives
from qMRMLSceneModel (instead of having qMRMLSceneModel being a source of
qMRMLTreeProxyModel). The old design was facing issues when qMRMLSceneModel
was adding extra items on the vtkMRMLScene (preItems and postItems).

git-svn-id: http://svn.slicer.org/Slicer3/trunk@14122 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/Libs/qMRMLWidgets/CMakeLists.txt
+++ b/Libs/qMRMLWidgets/CMakeLists.txt
@@ -46,6 +46,10 @@ SET(qMRMLWidgets_SRCS
   qMRMLSceneFactoryWidget.h
   qMRMLSceneModel.cxx
   qMRMLSceneModel.h
+  qMRMLSceneTransformModel.cxx
+  qMRMLSceneTransformModel.h
+  qMRMLSceneTreeModel.cxx
+  qMRMLSceneTreeModel.h
   qMRMLSliceViewWidget.cxx
   qMRMLSliceViewWidget.h
   qMRMLSliceViewWidget_p.h
@@ -54,8 +58,8 @@ SET(qMRMLWidgets_SRCS
   qMRMLThreeDRenderView.cxx
   qMRMLThreeDRenderView.h
   qMRMLThreeDRenderView_p.h
-  qMRMLTransformProxyModel.cxx
-  qMRMLTransformProxyModel.h
+  #qMRMLTransformProxyModel.cxx
+  #qMRMLTransformProxyModel.h
   qMRMLTransformSliders.cxx
   qMRMLTransformSliders.h
   qMRMLTreeProxyModel.cxx
@@ -85,12 +89,14 @@ SET(qMRMLWidgets_MOC_SRCS
   qMRMLROIWidget.h
   qMRMLSceneFactoryWidget.h
   qMRMLSceneModel.h
+  qMRMLSceneTransformModel.h
+  qMRMLSceneTreeModel.h
   qMRMLSliceViewWidget.h
   qMRMLSliceViewWidget_p.h
   qMRMLSortFilterProxyModel.h
   qMRMLThreeDRenderView.h
   qMRMLThreeDRenderView_p.h
-  qMRMLTransformProxyModel.h
+  #qMRMLTransformProxyModel.h
   qMRMLTreeProxyModel.h
   qMRMLTreeProxyModel_p.h
   qMRMLTransformSliders.h
